--- a/Models/_tmp/2024.06.03_ControlSpeech.md
+++ b/Models/_tmp/2024.06.03_ControlSpeech.md
@@ -85,7 +85,7 @@
 <summary>原文</summary>
 
 > However, these two types of models have their own limitations.
-> As illustrated in the right panel of Figure 1, zero-shot TTS can clone the voice of any speaker, but the style is fixed and cannot be further controlled or adjusted.
+> As illustrated in the right panel of Fig.01, zero-shot TTS can clone the voice of any speaker, but the style is fixed and cannot be further controlled or adjusted.
 > Conversely, style-controllable TTS can synthesize speech in any desired style, but it cannot specify the timbre of the synthesized voice.
 > Although some efforts ([InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md)) have been made to use speaker IDs for control, these approaches are limited to testing on constrained in-domain datasets.
 > Therefore, we propose a novel model ***ControlSpeech***, which simultaneously controls timbre, content, and style, demonstrating powerful zero-shot cloning and control capabilities at the same time.
@@ -94,6 +94,9 @@
 <br>
 
 但是, 这两种类型的模型有着它们的局限性.
+
+![](../_Images/2024.06.03_ControlSpeech_Fig.01.png)
+
 如图 01 的右侧, 零样本文本转语音能够克隆任意说话人的声音, 但风格是固定的, 且无法控制或调整.
 而风格可控文本转语音则相反, 能够合成任何想要的风格的语音, 但无法指定合成声音的音素.
 尽管有一些工作 ([InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md)) 试图使用说话人 ID 来控制, 但这些方法仅限于在受限的数据集上进行测试.
@@ -175,13 +178,25 @@
 
 ## 2.Related Works
 
+<details>
+<summary>原文</summary>
+
 > In this section, we will introduce zero-shot TTS, text prompt-based controllable TTS, and discrete codec tasks related to ***ControlSpeech***.
 > Due to space constraints, the detailed discussion of related work is provided in appendix A.
 > However, we encourage reviewers to closely examine the connections and distinctions between ***ControlSpeech*** and prior related work.
 
+</details>
+<br>
+
+本节我们介绍零样本文本转语音, 基于文本提示的可控文本转语音, 以及和 ***ControlSpeech*** 相关的离散编解码任务.
+由于篇幅限制, 相关工作的详细讨论请参见附录 A.
+但是, 我们鼓励评审者仔细审查 ***ControlSpeech*** 与相关工作之间的联系和区别.
 注: 由附录 A 移动至此.
 
 ### A.1.Discrete Codec Model
+
+<details>
+<summary>原文</summary>
 
 > In recent times, neural acoustic codecs ([SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md), [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md), [HiFi-Codec](../../Models/Speech_Neural_Codec/2023.05.04_HiFi-Codec.md), [Vocos](../../Models/TTS3_Vocoder/2023.03.01_Vocos.md), [SpeechTokenizer](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md), [FunCodec](../../Models/Speech_Neural_Codec/2023.09.14_FunCodec.md)) have demonstrated remarkable capabilities in reconstructing high-quality audio at extremely low bitrates.
 > To elaborate, [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) utilizes a model architecture comprising a fully convolutional encoder/decoder network and a residual vector quantizer (RVQ) to effectively compress speech.
@@ -197,7 +212,29 @@
 > However, our efforts did not yield substantial improvements compared to [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md).
 > Therefore, we utilize the pre-trained [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) to extract the corresponding codec representations in ***ControlSpeech***.
 
+</details>
+<br>
+
+近段时间, 神经声学编解码器 ([SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md), [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md), [HiFi-Codec](../../Models/Speech_Neural_Codec/2023.05.04_HiFi-Codec.md), [Vocos](../../Models/TTS3_Vocoder/2023.03.01_Vocos.md), [SpeechTokenizer](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md), [FunCodec](../../Models/Speech_Neural_Codec/2023.09.14_FunCodec.md)) 已经在以相当低比特率重构高质量音频方面展现出卓越的能力.
+下面做进一步的说明:
+- [SoundStream](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) 利用一个由全卷积编码器/解码器网络和残差向量量化器 (RVQ) 组成的模型架构, 以有效地压缩语音.
+- [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) 采用具有量化隐变量的流式编码器-解码器架构, 以端到端的方式训练.
+- [HiFi-Codec](../../Models/Speech_Neural_Codec/2023.05.04_HiFi-Codec.md) 引入了组残差向量量化 (GRVQ) 技术, 以减少量化器的数量.
+- [Vocos](../../Models/TTS3_Vocoder/2023.03.01_Vocos.md) 旨在将时域和基于傅里叶的神经语音合成器之间的差距缩小到足以产生高质量音频.
+- [SpeechTokenizer](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md) 和 [FunCodec](../../Models/Speech_Neural_Codec/2023.09.14_FunCodec.md) 在离散编解码的第一个通道中使用语义 Token 以减少文本和音频 Token 的差距.
+- 这种转变有助于缓解文本和音频 Token 之间的差距.
+- [Language-Codec](../../Models/Speech_Neural_Codec/2024.02.19_Language-Codec.md) 采用 MCRVQ 机制, 将信息均匀分配到前三个通道, 从而减少文本和声学 Token 之间的差距.
+- [DAC](../../Models/Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md) 通过引入多尺度判别器损失来大幅提高编解码器重建的质量.
+- [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) 开创了解耦编解码器的概念, 将语音分解为音色, 内容, 语调, 和声学细节, 并展示了一定程度的语音转换能力.
+
+为了增强解耦编解码器, 我们探索了修改并行向量量化结构为残差向量量化形式, 并将额外的风格监督信号纳入其中.
+然而, 与 [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) 相比我们的努力没有产生明显的改善.
+因此, 我们使用预训练的 [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) 提取 ***ControlSpeech*** 中的相应编解码器表示.  
+
 ### A.2.Zero-shot TTS
+
+<details>
+<summary>原文</summary>
 
 > Zero-shot speech synthesis refers to the ability to synthesize the voice of an unseen speaker based solely on a few seconds of audio prompt, also known as voice cloning.
 > In recent months, with the advancement of generative large-scale models, a plethora of outstanding works have emerged.
@@ -213,7 +250,27 @@
 > It is noteworthy that current zero-shot TTS models are unable to achieve arbitrary language style control.
 > ***ControlSpeech*** is the first TTS model capable of simultaneously performing zero-shot timbre cloning and style control.
 
+</details>
+<br>
+
+零样本语音合成指的是仅基于数秒的音频提示合成未见过的说话人声音, 也称为声音克隆.
+近几个月, 随着生成式大规模模型的进步, 越来越多的优秀工作出现.
+- [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) 利用离散编解码器表示, 以级联的方式结合自回归和非自回归模型, 保留语言模型的强大上下文能力.
+- [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md) 以连续向量而不是离散神经编解码器标记, 并引入隐变量扩散模型中的内在学习.
+- [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md) 和 [Make-A-Voice](../../Models/_tmp/2023.05.30_Make-A-Voice.md) 利用语义标记以减少文本和音频特征之间的差距.
+- [Mega-TTS](../../Models/_tmp/2023.06.06_Mega-TTS.md), [Mega-TTS2](../../Models/_tmp/2023.07.14_Mega-TTS2.md) 采用传统的梅尔频谱, 分离音色和语调, 并使用自回归方法进一步建模语调.
+- [VoiceBox](../../Models/_tmp/2023.06.23_VoiceBox.md) 和 [P-Flow](../../Models/_tmp/P-Flow.md) 采用流模型作为生成器, 展示出健壮的生成性能.
+- [SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md) 和 [MobileSpeech](../../Models/_tmp/2024.02.14_MobileSpeech.md) 采用非自回归和基于掩膜迭代生成方法, 实现了高效的推理速度和生成质量的良好平衡.
+- 与我们的工作最相关的是 [NaturalSpeech 3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md), 它也采用最新解耦编解码器, 但主要目标是提高零样本模型性能.
+
+但我们认为解耦编解码器在控制生成模型中更为合适.
+值得注意的是, 当前的零样本 TTS 模型无法实现任意语言风格控制.
+***ControlSpeech*** 是第一个 TTS 模型, 能够同时实现零样本音色克隆和风格控制.
+
 ### A.3.Text prompt based controllable TTS
+
+<details>
+<summary>原文</summary>
 
 > Some recent studies propose to control speech style through natural language prompts, providing a more interpretable and user-friendly approach of control.
 > [PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md) employs manually annotated text prompts to describe four to five attributes of speech (gender, pitch, speaking speed, energy, and emotion) and trains model on two synthesized speaker datasets and LibriTTS.
@@ -221,117 +278,374 @@
 > [Textrolspeech](../../Datasets/2023.08.28_TextrolSpeech.md) introduces an efficient architecture which treats text controllable TTS as a language model task.
 > [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md) proposes a two-stage TTS approach for cross-speaker style transfer with natural language descriptions based on [VITS](../../Models/E2E/2021.06.11_VITS.md).
 > [PromptTTS 2](../../Models/_tmp/2023.09.05_PromptTTS2.md) proposes an automatic description creation pipeline leveraging LLM [4] and adopts a diffusion model to capture the one-to-many relationship.
-> It is noteworthy that existing stylecontrollable TTS models are either speaker-independent or can only control timbre using speaker IDs, without the capability for timbre cloning.
+> It is noteworthy that existing style-controllable TTS models are either speaker-independent or can only control timbre using speaker IDs, without the capability for timbre cloning.
 > The introduction of ***ControlSpeech*** significantly expands the boundaries of the controllable TTS task.
 
-## 3.***ControlSpeech***
+</details>
+<br>
+
+一些近期研究提出通过自然语言提示控制语音风格, 提供了一种更具可解释性和用户友好的控制方式.
+- [PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md) 以手工注释的文本提示描述语音的四到五个属性 (性别, 音高, 说话速度, 能量, 以及情绪), 并在两个合成说话人数据集和 LibriTTS 上训练模型.
+- [InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md) 是一种三阶段训练方法, 用于从自然语言风格提示中捕获语义信息, 并将其作为条件输入到 TTS 系统.
+- [Textrolspeech](../../Datasets/2023.08.28_TextrolSpeech.md) 引入了一个高效的架构, 将文本可控 TTS 视为语言模型任务.
+- [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md) 提出了一个基于 [VITS](../../Models/E2E/2021.06.11_VITS.md) 的跨说话人风格转移的两阶段 TTS 方法, 基于自然语言描述.
+- [PromptTTS 2](../../Models/_tmp/2023.09.05_PromptTTS2.md) 提出了一个利用 LLM [4] 的自动描述创建管道, 并采用扩散模型来捕获一对多关系.
+
+值得注意的是现有风格可控文本转语音模型要么和说话人无关, 要么只能通过说话人 ID 控制音色, 没有声音克隆能力.
+***ControlSpeech*** 引入了语音风格可控的 TTS 模型, 扩展了控制 TTS 任务的边界.
+
+## 3.ControlSpeech
+
+<details>
+<summary>原文</summary>
 
 > In this section, we will first introduce the motivation and overall design of ***ControlSpeech***.
 > Next, we will provide a detailed explanation of the disentanglement and generation process of the codec, followed by the ***Style Mixture Semantic Density (SMSD)*** module.
 > Finally, we will discuss the training loss and inference process of ***ControlSpeech***.
 
+</details>
+<br>
+
+本节, 我们首先介绍 ***ControlSpeech*** 的动机和总体设计.
+然后, 我们将详细解释编解码器的解耦和生成过程, 并介绍 ***Style Mixture Semantic Density (SMSD)*** 模块.
+最后, 我们将讨论 ***ControlSpeech*** 的训练损失和推理过程.
+
 ### 3.1.Overall
+
+<details>
+<summary>原文</summary>
 
 > To achieve simultaneous zero-shot timbre cloning and style cloning, one viable approach is to leverage a large-scale pre-trained disentangled codec space.
 > On one hand, extensive pre-training on a diverse speaker dataset ensures fundamental zero-shot capabilities.
 > On the other hand, disentangled codec representations effectively reduce the entanglement between timbre and style.
-> As illustrated in Figure 2, ***ControlSpeech*** is fundamentally an encoder-decoder model based on [FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md) for codec generation.
+> As illustrated in Fig.02, ***ControlSpeech*** is fundamentally an encoder-decoder model based on [FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md) for codec generation.
 > The dashed box represents frame-level features, while the solid box represents global features.
 > The ***Style Mixture Semantic Density (SMSD)*** module samples style text to generate corresponding global style representations, which are then combined with text representations from the text encoder via a cross-attention module.
 > These combined representations are fed into the duration prediction model and subsequently into the codec generator, which is a non-autoregressive [Conformer](../../Models/ASR/2020.05.16_Conformer.md) based on mask iteration and parallel generation.
 > The timbre extractor is a Transformer encoder that converts the output of the speech encoder into a global vector, representing the timbre attributes.
-> By inputting a style description Xs, a content text Xc, and a speech prompt Xt, ***ControlSpeech*** aims to sequentially generate the corresponding style codec Ys, content codec Yc, and timbre embedding Yt.
+> By inputting a style description $X_s$, a content text $X_c$, and a speech prompt $X_t$, ***ControlSpeech*** aims to sequentially generate the corresponding style codec $Y_s$, content codec $Y_c$, and timbre embedding $Y_t$.
 > These representations are then concatenated and upsampled into speech through the [pre-trained codec decoder](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md).
 
-### 3.2.Decoupling and generation of Codec
+</details>
+<br>
+
+为了实现同步的零样本音色克隆和风格克隆, 一个可行的方法是利用一个大规模预训练解耦编解码空间.
+一方面, 在多样说话人数据集上广泛地预训练能够确保基本的零样本能力.
+另一方面, 解耦编解码表示能有效地减少音色和风格的纠缠.
+如图 02 所示, ***ControlSpeech*** 是基于 [FastSpeech2](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md) 的编码器-解码器模型用于编解码生成.
+虚线框表示帧级特征, 实线框表示全局特征.
+
+![](../_Images/2024.06.03_ControlSpeech_Fig.02.png)
+
+***风格混合语义密度 (Style Mixture Semantic Density, SMSD)*** 模块采样风格文本以生成对应的全局风格表示, 并通过交叉注意模块与文本编码器的表示相结合.
+这些结合的表示被输入到时长预测模型然后传入编解码生成器, 该编解码生成器是基于掩码迭代和并行生成的非自回归 [Conformer](../../Models/ASR/2020.05.16_Conformer.md).
+音色提取器则是一个 Transformer 编码器, 它将语音编码器的输出转换为全局向量, 代表音色属性.
+通过输入风格描述 $X_s$, 内容文本 $X_c$, 语音提示 $X_t$, ***ControlSpeech*** 试图依次生成对应的风格编解码 $Y_s$, 内容编解码 $Y_c$, 音色嵌入 $Y_t$.
+这些表示之后拼接后通过预训练编解码器解码器 [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) 进行上采样, 生成语音.
+
+### 3.2.Decoupling and Generation of Codec
+
+<details>
+<summary>原文</summary>
 
 > We utilize [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) as our codec disentangler.
-> During the training of ***ControlSpeech***, we freeze the corresponding codec encoder to obtain downsampled compressed audio frames h from the speech Y .
-> The frames h are processed through the disentangling quantizer module and the timbre extractor module to derive the original content codec Yc, prosody codec Yp, acoustic codec Ya, and timbre information Yt.
-> We exclude the content Yc and timbre information Yt of the representation collectively referred to as style Ys.
-> In practice, we concatenate the prosody codec Yp and the acoustic codec Ya along the channel dimension to obtain the corresponding style codec Ys, as represented below:
+> During the training of ***ControlSpeech***, we freeze the corresponding codec encoder to obtain downsampled compressed audio frames $h$ from the speech $Y$.
+> The frames $h$ are processed through the disentangling quantizer module and the timbre extractor module to derive the original content codec $Y_c$, prosody codec $Y_p$, acoustic codec $Y_a$, and timbre information $Y_t$.
+> We exclude the content $Y_c$ and timbre information $Y_t$ of the representation collectively referred to as style $Y_s$.
+> In practice, we concatenate the prosody codec $Y_p$ and the acoustic codec $Y_a$ along the channel dimension to obtain the corresponding style codec $Y_s$, as represented below:
+
+</details>
+<br>
+
+$$
+  Y_s = h-Y_c-Y_t = \text{concat}(Y_p,Y_a)\tag{01}
+$$
+
+我们使用 [FACodec](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md) 作为我们的编解码解耦器.
+在 ***ControlSpeech*** 的训练过程中, 我们冻结相应的编解码器编码器以从语音 $Y$ 获得下采样压缩的音频帧 $h$.
+帧 $h$ 通过解耦量化器模块和音色提取器模块, 导出原始内容编解码 $Y_c$, 语调编解码 $Y_p$, 声学编解码 $Y_a$, 以及音色信息 $Y_t$.
+我们排除内容 $Y_c$ 和音色信息 $Y_t$ 后并将其统称为风格 $Y_s$.
+实际上, 我们沿着通道维度将语调编解码 $Y_p$ 和声学编解码 $Y_a$ 连接起来, 得到相应的风格编解码 $Y_s$, 如公式 01 所示.
+
+<details>
+<summary>原文</summary>
 
 > The codec generation process comprises two stages.
-> In the first stage, based on paired text-speech data {X, Ycodec}, where X = {x1, x2, x3, · · · , xT } represents the fusion of global style and aligned text and Ycodec denotes the representation of speech through vector quantization, formula as:
+> In the first stage, based on paired text-speech data $\{X, Y_{codec}\}$, where $X = \{x_1, x_2, x_3, \cdots, x_T \}$ represents the fusion of global style and aligned text and $Y_{codec}$ denotes the representation of speech through vector quantization, formula as:
 
-> we consider T as the downsampled utterance length, which is equal to the length of the text.
-> N represents the number of channels for every frame.
-> The row vector of each acoustic code matrix Ct,: represents the six codes for frame t, and the column vector of each acoustic code matrix C:,i represents the code sequence from the j-th codebook, where i ∈ {1, 2, · · · , N }.
+$$
+  Y_{codec} = Y_s+Y_c = C_{1:T,1:N}\in \mathbb{R}^{T\times N}\tag{02}
+$$
 
-> Follow [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), in the training process of ***ControlSpeech***, we randomly select a certain channel of C1:T,1:N for training.
-> For the generation of the i channel P (C1:T,i | X1:T ; θ), we employ a mask-based generative model as our parallel decoder.
-> We sample the mask Mi ∈ {0, 1}T according to a cosine schedule [5] for codec level i, specifically sampling the masking ratio p = cos(u ) where (cid:3). and the mask Mi ∼ Bernoulli(p).
-> Here, Mi represents the portion to be masked in ′ u the i-th level, while ¯Mi denotes the unmasked portion in the i-th level.
-> As shown in Figure 2 (c), the prediction of this portion is refined based on the prompt j(j < i) channels and the concatenation of target text and the unmasked portion of the i channel.
+> we consider $T$ as the downsampled utterance length, which is equal to the length of the text.
+> $N$ represents the number of channels for every frame.
+> The row vector of each acoustic code matrix $C_{t,:}$ represents the six codes for frame $t$, and the column vector of each acoustic code matrix $C_{:,i}$ represents the code sequence from the $j$-th codebook, where $i \in \{1, 2, \cdots , N \}$.
+
+</details>
+<br>
+
+编解码生成过程由两个阶段组成.
+在第一个阶段, 基于成对的文本-语音数据 $\{X, Y_{codec}\}$, 其中 $X = \{x_1, x_2, x_3, \cdots, x_T \}$ 表示全局风格和对齐文本的融合, $Y_{codec}$ 代表通过向量量化表示的语音表示.
+
+$$
+  Y_{codec} = Y_s+Y_c = C_{1:T,1:N}\in \mathbb{R}^{T\times N}\tag{02}
+$$
+
+我们认为 $T$ 为下采样的发言长度, 等于文本的长度.
+$N$ 表示每帧的通道数.
+每一行向量 $C_{t,:}$ 表示第 $t$ 帧的六个编码, 而每一列向量 $C_{:,i}$ 表示第 $j$ 个码本的码序列, 其中 $i \in \{1, 2, \cdots , N \}$.
+
+<details>
+<summary>原文</summary>
+
+> Follow [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), in the training process of ***ControlSpeech***, we randomly select a certain channel of $C_{1:T,1:N}$ for training.
+> For the generation of the $i$ channel $P(C_{1:T,i} | X_{1:T}; \theta)$, we employ a mask-based generative model as our parallel decoder.
+> We sample the mask $M_i \in \{0, 1\}^T$ according to a cosine schedule [5] for codec level $i$, specifically sampling the masking ratio $p = \cos(u')$ where ($u'\sim U[0,\dfrac{\pi}{2}]$) and the mask $M_i \sim Bernoulli(p)$.
+> Here, $M_i$ represents the portion to be masked in the $i$-th level, while $M'_i$ denotes the unmasked portion in the $i$-th level.
+> As shown in Fig.02 (c), the prediction of this portion is refined based on the prompt $j$ ($j < i$) channels and the concatenation of target text and the unmasked portion of the $i$ channel.
 > Therefore, the prediction for this part can be specified as follows:
 
-> In the second stage, following [AdaSpeech](../../Models/_tmp/2021.03.01_AdaSpeech.md), we utilize a conditional normalization layer to fuse the previously obtained Ycodec and Yt, producing the input for the codec decoder.
-> This input is then processed by the pre-trained decoder to generate the final speech output Y .
-> Specifically, we first use two simple linear layers Wγ and Wβ, which take the speaker embedding Ys as input and output the scale vectors γ and bias vectors β respectively.
-> These lightweight, learnable scale vectors γ and bias vectors β are then fused with Ycodec.
+$$
+  P(C_{1:T,i} | X_{1:T}; \theta) = P(M_i C_{1:T,i}|C_{1:T,<i}, X_{1:T}; M'_iC_{1:T,i};\theta)\tag{03}
+$$
+
+</details>
+<br>
+
+遵循 [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), 在 ***ControlSpeech*** 的训练过程中, 我们随机选择 $C_{1:T,1:N}$ 中的某一通道用于训练.
+对于第 $i$ 个通道的生成 $P(C_{1:T,i} | X_{1:T}; \theta)$, 我们采用基于掩码的生成模型作为并行解码器.
+我们根据余弦调度 [5] 采样掩码 $M_i \in \{0, 1\}^T$, 具体地, 我们采样掩码比例 $p = \cos(u')$ 其中 ($u'\sim U[0,\dfrac{\pi}{2}]$) 以及掩码 $M_i \sim Bernoulli(p)$.
+这里, $M_i$ 表示第 $i$ 级的掩码部分, 而 $M'_i$ 表示第 $i$ 级的未掩码部分.
+如图 02 C 所示, 这部分的预测基于提示 $j$ ($j < i$) 通道和目标文本和未掩码部分的拼接.
+因此, 对于这一部分的预测, 可以如下定义:
+
+
+$$
+  P(C_{1:T,i} | X_{1:T}; \theta) = P(M_i C_{1:T,i}|C_{1:T,<i}, X_{1:T}; M'_iC_{1:T,i};\theta)\tag{03}
+$$
+
+<details>
+<summary>原文</summary>
+
+> In the second stage, following [AdaSpeech](../../Models/_tmp/2021.03.01_AdaSpeech.md), we utilize a conditional normalization layer to fuse the previously obtained $Y_{codec} and $Y_t$, producing the input for the codec decoder.
+> This input is then processed by the pre-trained decoder to generate the final speech output $Y$.
+> Specifically, we first use two simple linear layers $W_{\gamma}$ and $W_{\beta}$, which take the speaker embedding $Y_s$ as input and output the scale vectors $\gamma$ and bias vectors $\beta$ respectively.
+> These lightweight, learnable scale vectors $\gamma$ and bias vectors $\beta$ are then fused with $Y_{codec}$.
 > This process can be described by the following formula:
-> are the mean and variance of the hidden representation of Ycodec.
+
+$$
+  Y = \text{CodecDecoder}(W_{\gamma}Y_t\dfrac{Y_{codec}-\mu_c}{\sigma_c^2} +W_{\beta} Y_t)\tag{04}
+$$
+
+> where $\mu_c$ and $\sigma_c^2$ are the mean and variance of the hidden representation of $Y_{codec}$.
+
+</details>
+<br>
+
+第二个阶段, 遵循 [AdaSpeech](../../Models/_tmp/2021.03.01_AdaSpeech.md), 我们利用条件归一化层融合之前获得的 $Y_{codec}$ 和 $Y_t$, 产生编解码器解码器的输入.
+输入被预训练解码器处理后生成最终的语音输出 $Y$.
+具体来说, 我们首先使用两个简单线性层 $W_{\gamma}$ 和 $W_{\beta}$, 它们接收说话者嵌入 $Y_s$ 作为输入, 输出尺度向量 $\gamma$ 和偏差向量 $\beta$ 各自.
+这些轻量化的, 可学习的尺度向量 $\gamma$ 和偏差向量 $\beta$ 随后与 $Y_{codec}$ 融合.
+这一过程可以用下面的公式表示:
+
+$$
+  Y = \text{CodecDecoder}(W_{\gamma}Y_t\dfrac{Y_{codec}-\mu_c}{\sigma_c^2} +W_{\beta} Y_t)\tag{04}
+$$
+
+其中 $\mu_c$ 和 $\sigma_c^2$ 是 $Y_{codec}$ 的隐藏表示的均值和方差.
 
 ### 3.3.Style Mixture Semantic Density Modules
 
+<details>
+<summary>原文</summary>
+
 > During our experiments, we identified a many-to-many problem in the text style control module.
 > Specifically, different style texts can describe the same style of speech.
-> Similar to previous approaches [[PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md)], we utilize a pre-trained BERT model to extract the semantic information of style descriptions, thereby enhancing the generalization of out-of-domain style descriptions.
+> Similar to previous approaches ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md)), we utilize a pre-trained BERT model to extract the semantic information of style descriptions, thereby enhancing the generalization of out-of-domain style descriptions.
 > Moreover, it has been largely overlooked that a single style text can correspond to multiple speech instances from the same speaker.
 > For example, when using a text describing a happy tone to control audio, various degrees of happiness can be attributed to that description.
 > [PromptTTS 2](../../Models/_tmp/2023.09.05_PromptTTS2.md) recognized this issue and introduced a speech prompt to compensate for the details of the text description style, alleviating the one-to-many problem by incorporating additional information.
 > However, in the task of simultaneously zero-shot cloning timbre and zero-shot controlling style in speech synthesis, this approach can cause interference between the speech prompt and the style prompt.
 > Therefore, in ***ControlSpeech***, we designed a novel ***Style Mixture Semantic Density (SMSD)*** module to address the one-to-many problem of style representation.
-> We hypothesize that the semantic representation of style Xs is a global mixture of Gaussian distributions, where different Gaussian distributions represent varying degrees of a particular style.
+> We hypothesize that the semantic representation of style $X'_s$ is a global mixture of Gaussian distributions, where different Gaussian distributions represent varying degrees of a particular style.
 > During inference, we sample from the mixture of style semantic distributions to obtain an independent Gaussian distribution, with each sampled distribution reflecting different degrees of the same style.
-> Additionally, to further enhance the diversity of style control, we incorporated a noise perturbation module within the MDN network of the ***SMSD*** in the ***ControlSpeech*** model. **This module controls the isotropy of perturbations across different dimensions**.
+> Additionally, to further enhance the diversity of style control, we incorporated a noise perturbation module within the MDN network of the ***SMSD*** in the ***ControlSpeech*** model. 
+> **This module controls the isotropy of perturbations across different dimensions**.
 
-> Specifically, the raw style prompt sequence Xs = [X1, X2, X3, · · · , XL] is prepended with a [CLS] token, converted into a word embedding, and fed into the BERT model, where L refers to the length of style prompt.
-> The hidden vector corresponding to the [CLS] token is regarded as the global style semantic representation Xs to guide the generation and sampling of subsequent models.
+</details>
+<br>
 
-> Based on MDN network [53, 18, 10, 12], suppose we want to regress response target style represen∈ Rn.
-> We model the ∈ Rd by using covariates style semantic input representation Xs tation Ys conditional distribution as a mixture of Gaussian distribution, The formula is as follows:
+在我们的实验中, 我们发现文本风格控制模块中存在多对多问题.
+具体地, 不同风格文本可以描述相同风格的语音.
+类似于之前的方法 ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md)), 我们使用预训练的 BERT 模型用于提取风格描述的语音信息, 从而增强领域外风格描述的泛化.
+此外, 单个风格文本可能对应多个来自同一说话人的语音实例的情况被极大忽视.
+例如, 当使用文本描述开心的语气来控制音频时, 不同的开心程度可以归因于该描述.
+[PromptTTS 2](../../Models/_tmp/2023.09.05_PromptTTS2.md) 发现了这个问题, 并引入了语音提示来补偿文本描述风格的细节, 通过引入额外信息来缓解一对多问题.
+然而, 在零样本克隆音色和零样本控制风格的语音合成任务中, 这种方法可能导致语音提示和风格提示之间的干扰.
+因此, 在 ***ControlSpeech*** 中, 我们设计了一种新的 ***Style Mixture Semantic Density (SMSD)*** 模块来解决风格表示中的一对多问题.
+我们假设风格语义表示 $X'_s$ 是高斯分布的全局混合, 其中不同的高斯分布代表不同程度的特定风格.
+在推理时, 我们从风格语义分布的混合采样以获得独立高斯分布, 每个采样的分布反映出相同风格的不同程度.
+此外, 为了进一步增强风格控制的多样性, 我们在 ***ControlSpeech*** 模型的 ***SMSD*** 网络中引入了噪声扰动模块.
+**该模块控制不同维度的扰动的同质性.**
 
-> where K is a hyperparameter about the number of independent Gaussian distribution and other mixture distribution parameters πk, µk, σ2(k) are output by a neural MDN network fθ dependent on input style semantic representation Xs
+<details>
+<summary>原文</summary>
 
-> It should be noted that the sum of the mixture weights is constrained to 1 during the training phase, which can be achieved by applying a softmax function on the corresponding neural network output αk, formalized as:
+> Specifically, the raw style prompt sequence $X_s = [X_1, X_2, X_3, \cdots, X_L]$ is prepended with a `[CLS]` token, converted into a word embedding, and fed into the BERT model, where $L$ refers to the length of style prompt.
+> The hidden vector corresponding to the `[CLS]` token is regarded as the global style semantic representation $X_s$ to guide the generation and sampling of subsequent models.
+
+> Based on MDN network [53, 18, 10, 12], suppose we want to regress response target style representation $Y'_s\in\mathbb{R}^d$ by using covariates style semantic input representation $X'_s\in\mathbb{R}^{n}$. 
+> We model the conditional distribution as a mixture of Gaussian distribution, The formula is as follows:
+
+$$
+  P_{\theta}(Y'_s|X'_s) = \sum_{k=1}^K \pi_k\mathcal{N}(Y'_s|\mu^{(k)}, \sigma^{2(k)})\tag{05}
+$$
+
+> where $K$ is a hyperparameter about the number of independent Gaussian distribution and other mixture distribution parameters $\pi_k$, $\mu^{(k)}$, $\sigma^{2(k)}$ are output by a neural MDN network $f_{\theta}$ dependent on input style semantic representation $X'_s$, formula as:
+
+$$
+  \pi\in \Delta^{K-1},\quad \mu^{(k)}\in\mathbb{R}^d,\quad \sigma^{2(k)}\in S_{+}^{d}=f_{\theta}(X'_s)\tag{06}
+$$
+
+> It should be noted that the sum of the mixture weights is constrained to 1 during the training phase, which can be achieved by applying a softmax function on the corresponding neural network output $a_k$, formalized as:
+
+$$
+  \pi_{k} = \dfrac{\exp(a_k)}{\sum_{k=1}^{K} \exp(a_k)}\tag{07}
+$$
+
+</details>
+<br>
+
+具体地, 原始风格提示序列 $X_s = [X_1, X_2, X_3, \cdots, X_L]$ 用 `[CLS]` 标识符加在前面, 然后转换为词嵌入, 并输入 BERT 模型, 其中 $L$ 表示风格提示的长度.
+对应 `[CLS]` 标识符的隐藏向量被视为全局风格语义表示 $X_s$ 来引导后续生成和采样模型.
+
+基于 MDN 网络, 假设我们想通过协变量风格语义输入表示 $X'_s\in\mathbb{R}^{n}$ 来回归响应目标风格表示 $Y'_s\in\mathbb{R}^d$.
+我们将条件分布建模为高斯混合分布, 公式如下:
+
+$$
+  P_{\theta}(Y'_s|X'_s) = \sum_{k=1}^K \pi_k\mathcal{N}(Y'_s|\mu^{(k)}, \sigma^{2(k)})\tag{05}
+$$
+
+其中 $K$ 是关于独立高斯分布数量的超参数, 其他混合分布参数 $\pi_k$, $\mu^{(k)}$, $\sigma^{2(k)}$ 由 MDN 网络 $f_\theta$ 输出, 依赖于输入风格语义表示 $X'_s$, 公式如下:
+
+$$
+  \pi\in \Delta^{K-1},\quad \mu^{(k)}\in\mathbb{R}^d,\quad \sigma^{2(k)}\in S_{+}^{d}=f_{\theta}(X'_s)\tag{06}
+$$
+
+应该注意到训练阶段混合权重的和为 1, 这可以对相应网络输出 $a_k$ 应用 Softmax 函数, 即
+
+$$
+  \pi_{k} = \dfrac{\exp(a_k)}{\sum_{k=1}^{K} \exp(a_k)}\tag{07}
+$$
+
+<details>
+<summary>原文</summary>
 
 > To further enhance the diversity of style control, we designed a specialized noise perturbation module within the ***SMSD*** module to constrain the noise model.
-> As illustrated by the circles of ***SMSD*** module in Figure 2 (b), this noise perturbation module regulates the isotropy of perturbations ε across different dimensions in variance σ2(k).
-> The four types of perturbations from left to right in Figure 2 (b) are as follows:
+> As illustrated by the circles of ***SMSD*** module in Fig.02 (b), this noise perturbation module regulates the isotropy of perturbations $\varepsilon$ across different dimensions in variance $\sigma^{2(k)}$.
+> The four types of perturbations from left to right in Fig.02 (b) are as follows:
+>
+> - Fully factored, let $\sigma^{2(k)}=f_{\theta}(X'_s)+f_{\theta}(\varepsilon)=\text{diag}(\sigma^{2(k)})\in \mathbb{R}_{+}^{d}$ where the noise level for each dimension is predicted separately.
+> - Isotropic, let $\sigma^{2(k)}=f_{\theta}(X'_s)+f_{\theta}(\varepsilon)=\sigma^{2(k)}I\in \mathbb{R}_{+}$ which assumes the same noise level for each dimension over $d$.
+> - Isotropic across clusters, let $\sigma^{2(k)}=f_{\theta}(X'_s)+f_{\theta}(\varepsilon)=\sigma^{2}I\in \mathbb{R}_{+}$ which assumes the same noise level for each dimension over $d$ and cluster.
+> - Fixed isotropic, same as above but do not learn $\sigma^2$.
 
-> - Fully factored, let σ2(k) = fθ(Xs+ where the noise level for each dimension is predicted separately.
-> - Isotropic, let σ2(k) = fθ(Xs for each dimension over d .) + fθ(ε) = σ2(k)I ∈ R+ which assumes the same noise level
-> - Isotropic across clusters, let σ2(k) = fθ(Xs) + fθ(ε) = σ2I ∈ R+ which assumes the same noise level for each dimension over d and cluster.
-> - Fixed isotropic, same as above but do not learn σ2.
+</details>
+<br>
+
+为了进一步增强风格控制的多样性, 我们在 ***SMSD*** 模块内设计了一个专门的噪声扰动模块, 以约束噪声模型.
+如图 02 (b) 中 ***SMSD*** 模块的圆圈所示, 这个噪声扰动模块调节了扰动 $\varepsilon$ 在不同维度上的各向同性, 这些扰动位于方差 $\sigma^{2(k)}$ 中. 
+图 02 (b) 中从左至右的四种扰动类型如下:
+- 完全分解, 令 $\sigma^{2(k)}=f_{\theta}(X'_s)+f_{\theta}(\varepsilon)=\text{diag}(\sigma^{2(k)})\in \mathbb{R}_{+}^{d}$ 其中, 每个维度的噪声水平是分别预测的.
+- 各向同性, 令 $\sigma^{2(k)}=f_{\theta}(X'_s)+f_{\theta}(\varepsilon)=\sigma^{2(k)}I\in \mathbb{R}_{+}$ 其中, 每个维度的噪声水平是相同的.
+- 各向同性的簇, 令 $\sigma^{2(k)}=f_{\theta}(X'_s)+f_{\theta}(\varepsilon)=\sigma^{2}I\in \mathbb{R}_{+}$ 其中, 每个维度的噪声水平是相同的, 但在簇中.
+- 固定各向同性, 与上述相同, 但不学习 $\sigma^2$.
+
+<details>
+<summary>原文</summary>
 
 > Through the experimental analysis in the appendix G, isotropic across clusters is used as the mode of noise perturbation.
 > Following the noise perturbation model, we obtain more robust mean, variance, and weight parameters for the mixture of Gaussian distributions.
-> The criterion for training the ***SMSD*** module is the negative log-likelihood of the observation Ys given its input Xs.
+> The criterion for training the ***SMSD*** module is the negative log-likelihood of the observation $Y_s$ given its input $X_s$.
 > The loss function can be formulated as follows, the objective is clearly non-convex.
-> Details about LSM SD are derived in the appendix B.
+> Details about $Loss_{SMSD}$ are derived in the appendix B.
 
+</details>
+<br>
+
+通过附录 G 的实验分析, 我们采用各向同性的簇作为噪声扰动模型.
+基于噪声扰动模型, 我们获得了更加鲁棒的高斯混合分布的均值, 方差, 权重参数.
+训练 ***SMSD*** 模块的标准是对观测值 $Y_s$ 给定其输入 $X_s$ 的负对数似然.
+损失函数定义如下, 目标函数是非凸的.
+$Loss_{SMSD}$ 的细节在附录 B 中给出.
+
+$$
+\begin{aligned}
+  \mathcal{L}_{SMSD
+  }& =-\log P_{\theta}(Y'_{s}|X'_{s})  \\
+  &\propto-\sum_{k=1}^K(\pi_k \exp(-\dfrac{1}{2}(Y'_s-\mu^{(k)})^T (\sigma^{2(k)})^{-1} (Y'_s-\mu^{(k)})-\frac{1}{2} \text{logdet}\sigma^{2(k)})) \\
+  &=-\text{logsumexp}_k(log\pi_k-\frac{1}{2}(Y_s^{'}-\mu^{(k)})^T  (\sigma^{2(k)})^{-1} (Y'_s-\mu^{(k)})-\frac{1}{2}\text{logdet}\sigma^{2(k)}) \\
+  &=-\text{logsumexp}_k(\log\pi_k-\frac{1}{2}\left\|\frac{Y'_s-\mu^{(k)}}\sigma\right\|^2)
+\end{aligned}\tag{08}
+$$
+
+注: 由附录 B 移动至此.
+
+#TODO
 
 ### 3.4.Training and Inference
 
-> During the training process, the Duration Predictor is optimized using the mean square error loss, with the extracted duration serving as the training target.
-> We employ the Montreal Forced Alignment (MFA) tool [39] to extract phoneme durations, and we denote the loss for the Duration Predictor as Ldur.
-> The codec generator module is optimized using the cross-entropy loss function.
-> We randomly select a channel for optimization and denote this loss as Lcodec.
-> In the ***SMSD*** module, the target style is the global style representation obtained by passing style codec Ys through the representation Ys style extractor.
-> During training, we feed the ground truth style representation Ys and ground truth duration into the codec generator and duration predictor, respectively.
-> Therefore, the overall loss L for ***ControlSpeech*** can be expressed as follows:
+<details>
+<summary>原文</summary>
 
-> During the inference stage, we initiate the process by inputting the original stylistic descriptor Xs into the BERT module to obtain the stylized semantic representation Xs into the ′ ***SMSD*** subsequent module to obtain the corresponding π, µ and σ2.
-> By directly sampling Xs , we can derive the predicted style distribution.
+> During the training process, the Duration Predictor is optimized using the mean square error loss, with the extracted duration serving as the training target.
+> We employ the Montreal Forced Alignment (MFA) tool [39] to extract phoneme durations, and we denote the loss for the Duration Predictor as $Loss_{dur}$.
+> The codec generator module is optimized using the cross-entropy loss function.
+> We randomly select a channel for optimization and denote this loss as $Loss_{codec}$.
+> In the ***SMSD*** module, the target style is the global style representation obtained by passing style codec $Y_{s}$ through the representation $Y_{s}$ style extractor.
+> During training, we feed the ground truth style representation $Y_s$ and ground truth duration into the codec generator and duration predictor, respectively.
+> Therefore, the overall loss $Loss$ for ***ControlSpeech*** can be expressed as follows:
+
+$$
+  Loss = Loss_{codec} + Loss_{dur} + Loss_{SMSD}\tag{09}
+$$
+
+> During the inference stage, we initiate the process by inputting the original stylistic descriptor $X_s$ into the BERT module to obtain the stylized semantic representation $X'_s$ into the ***SMSD*** subsequent module to obtain the corresponding $\pi$, $\mu$ and $\sigma^2$.
+> By directly sampling $X_s$, we can derive the predicted style distribution.
 > Subsequently, we iteratively generate discrete acoustic tokens by incorporating the predicted style into the text state and employing the confidence based sampling scheme proposed by [5, 2].
-> Specifically, we perform multiple forward passes, and at each iteration j, we sample candidates for the masked positions.
-> We then retain Pj candidates based on their confidence scores, where Pj follows a cosine schedule.
+> Specifically, we perform multiple forward passes, and at each iteration $j$, we sample candidates for the masked positions.
+> We then retain $P_j$ candidates based on their confidence scores, where $P_j$ follows a cosine schedule.
 > Finally, by integrating the timbre prompt through the condition normalization layer and feeding it into the codec decoder, we generate the final speech output.
+
+</details>
+<br>
+
+在训练过程中, 时长预测器通过均方误差损失进行优化, 其中提取的时长作为训练目标. 
+我们采用蒙特利尔强制对齐（MFA）工具 [39] 来提取音素时长, 并将时长预测器的损失表示为$Loss_{dur}$. 
+编解码器生成模块则使用交叉熵损失函数进行优化. 
+我们随机选择一个通道进行优化, 并将此损失表示为 $Loss_{codec}$. 
+在 ***SMSD*** 模块中, 目标风格是通过将风格编解码器 $Y_{s}$ 传递给表示 $Y_{s}$ 风格提取器获得的全球风格表示. 
+在训练期间, 我们将真实风格表示$Y_s$和真实时长分别输入到编解码器生成器和时长预测器中. 
+因此, ***ControlSpeech*** 的整体损失$Loss$可以表示为：
+
+$$
+  Loss = Loss_{codec} + Loss_{dur} + Loss_{SMSD}\tag{09}
+$$
+
+在推理阶段, 我们通过将原始风格描述符$X_s$输入到BERT模块中, 以获得风格化的语义表示 $X'_s$, 并将其输入到***SMSD***后续模块中, 以获得相应的 $\pi$, $\mu$和$\sigma^2$. 
+通过直接采样 $X_s$, 我们可以推导出预测的风格分布. 
+随后, 我们通过将预测的风格融入文本状态, 并采用[5, 2]提出的基于信心的采样方案, 迭代生成离散的声学标记. 
+具体来说, 我们进行多次前向传递, 并在每次迭代 $j$ 时, 对掩码位置的候选者进行采样. 
+然后, 我们根据其置信度分数保留 $P_j$ 个候选者, 其中 $P_j$ 遵循余弦调度. 
+最后, 通过将音色提示通过条件归一化层集成, 并将其输入到编解码器解码器中, 我们生成最终的语音输出. 
 
 ## 4.Experiment
 
-### 4.1.***ControlToolkit***
+### 4.1.ControlToolkit
+
+
+<details>
+<summary>原文</summary>
 
 > In this section, we will introduce the ***VccmDataset***, related baselines, and evaluation metrics in ***ControlToolkit***.
 > Detailed experimental settings for training and inference as well as model architecture specifics, are provided in appendix C and appendix D respectively.
@@ -363,6 +677,9 @@
 > We analyze the MOS in two aspects: MOS-Q (Quality, assessing clarity and naturalness of duration and pitch) and MOS-S (Speaker similarity).
 > Furthermore, for the evaluation of style-controllable many-to-many scenarios, we design specific metrics: MOS-TS (Timbre Similarity), MOS-SD (Style Diversity), and MOS-SA (Style Accuracy).
 > We provide a detailed explanation of these metrics and their use cases in the many-to-many experiment section.
+
+</details>
+<br>
 
 ### 4.2.Evaluation on style controllability
 
